--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@bogeychan/elysia-logger": "^0.1.2",
 		"@noble/curves": "^1.6.0",
 		"@solana/web3.js": "^1.95.3",
+		"avail-js-sdk": "^0.2.16",
 		"aws-s3-sdk": "^1.0.1",
 		"croner": "^8.1.1",
 		"elysia": "latest",
